--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
 		}
 	],
 	"require": {
-		"php": ">=5.6.4"
+		"php": ">=5.6.4",
+		"symfony/console": "^3.3",
+		"symfony/polyfill-mbstring": "~1.0",
+		"doctrine/dbal": "^2.5"
 	},
 	"autoload": {
 		"psr-4": {
