--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
 	"name": "rozaverta/cmf",
+	"type": "library",
+	"version": "0.0.1-beta",
 	"description": "The Elastic CMF (Anaconda).",
 	"keywords": ["framework", "elastic", "els", "anaconda"],
 	"homepage": "https://rozaverta.com",
@@ -11,7 +13,7 @@
 		}
 	],
 	"require": {
-		"php": ">=5.6.4",
+		"php": ">=7.0",
 		"symfony/event-dispatcher": "^3.4",
 		"symfony/console": "^3.3",
 		"symfony/polyfill-mbstring": "~1.0",
