--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
 		"symfony/polyfill-mbstring": "~1.0",
 		"doctrine/dbal": "^2.5"
 	},
+	"require-dev": {
+		"predis/predis": "^1.1"
+	},
 	"autoload": {
 		"psr-4": {
 			"EApp\\": "core/"
